Modify index.html, recipeone.html and add recipetwo.html, recipethree.html

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <! DOCTYPE html>
-
 <html lang="en">
 
-<head>
+  <head>
 
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-<title>Odin Recipes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-</head>
+    <title>Odin Recipes</title>
 
-<body>
+  </head>
 
-<h1>Odin Recipes</h1>
+  <body>
 
-<ul>
+    <h1>Odin Recipes</h1>
 
-<li><a href="recipes/recipeone.html">Recipe One</a></li>
+    <ul>
 
-</ul>
-</body>
+      <li><a href="recipes/recipeone.html">Recipe One</a></li>
+
+    </ul>
+
+  </body>
 
 </html>
