Modify index.html and /recipes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <meta charset="UTF-8">
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Odin Recipes</title>
@@ -18,6 +20,8 @@
     <ul>
 
       <li><a href="recipes/recipeone.html">Recipe One</a></li>
+      <li><a href="recipes/recipetwo.html">Recipe Two</a></li>
+      <li><a href="recipes/recipethree.html">Recipe Three</a></li>
 
     </ul>
 
