--- a/recipes/recipeone.html
+++ b/recipes/recipeone.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe One</title>
 
@@ -14,7 +15,7 @@
     <h1>Recipe One</h1>
     
     <figure>
-      <img src="../images/pexels-glady-francis-fries.jpg" alt="a picture of a basket of seasoned fries" height="250" width="350">
+      <img src="../images/pexels-glady-francis-fries.jpg" alt="a picture of a basket of seasoned fries" height="400" width="350">
       <figcaption>A picture of a basket of seasoned fries. From pexels by Glady Francis.</figcaption>
     </figure>
 
@@ -50,5 +51,7 @@
         <li>Facilisi nascetur auctor maecenas imperdiet amet ridiculus eros fermentum elementum arcu ad parturient cubilia dictum. Aliquet ad. Mollis.</li>
 
     </ol>
+
   </body>
+
 </html>
