--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link ref="stylesheet" href="style.css"/>
+
     <title>Odin Recipes</title>
 
   </head>
@@ -17,7 +19,7 @@
 
     <h1>Odin Recipes</h1>
 
-    <ul>
+    <ul id="main">
 
       <li><a href="recipes/recipeone.html">Recipe One</a></li>
       <li><a href="recipes/recipetwo.html">Recipe Two</a></li>
